# Projeto-IA

./: README.md  pyproject.toml
docs/: index.md
src/: main.py  utils.py
src/algoritmos/: MapaSemafaro.py
src/ia_uv_semafaro/: __init__.py
src/ia_uv_semafaro/algoritmos/: MapaSemafaro.py
