[project]
name = "ia-uv-semafaro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryanbettin", email = "ryanbettin44@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
ia-uv-semafaro = "ia_uv_semafaro:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
